[package]
name = "enocean"
version = "0.2.5"
authors = ["pmirabel"]
edition = "2018"
description = "EnOcean serial protocol implementation."
license = "MIT AND Apache-2.0"
readme = "README.md"
repository = "https://github.com/Cutii/enocean"
homepage = "https://github.com/Cutii/enocean"
documentation = "https://docs.rs/enocean/"
keywords = ["enocean", "domotic", "smarthome" ]

[dependencies]
serialport = "3.2.0"